--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,11 +5,11 @@
   <title>Title</title>
 </head>
 <body>
-<button><a href="main/addUserPage">add user</a></button>
+<button><a href="admin/addUserPage">add user</a></button>
 <br>
-<button><a href="main/updateUserPage">update user</a></button>
+<button><a href="admin/updateUserPage">update user</a></button>
 <br>
-<button><a href="main/deleteUserPage">delete user</a></button>
+<button><a href="admin/deleteUserPage">delete user</a></button>
 <th th:each="user : ${usersList}">
   <h2 th:text="${user}"></h2>
 </th>
