--- a/src/main/resources/templates/addUserPage.html
+++ b/src/main/resources/templates/addUserPage.html
@@ -5,12 +5,18 @@
     <title>add user</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/main/createUser}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin/createUser}" th:object="${user}">
     <label for="name">Name</label>
     <input type="text" th:field="*{name}" id="name"/>
 
-    <label for="surname">Surname</label>
-    <input type="text" th:field="*{surName}" id="surname"/>
+    <label for="password">Password</label>
+    <input type="text" th:field="*{pass}" id="password"/>
+
+    <label for="role">Role</label>
+    <select id="role" name="role[]" multiple>
+        <option value="ROLE_ADMIN">Admin</option>
+        <option value="ROLE_USER">User</option>
+    </select>
 
     <input type="submit" value="add user">
 </form>
