--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,8 +4,6 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-
-
+<h2 th:text="${user}"></h2>
 </body>
 </html>
